// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build with a linked dep out of source build macos || linux: build-env dep snapshot 1`] = `
"# Build environment for dep@link:dep

#
# dep@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%/dep\\"
export cur__root=\\"%projectPath%/dep\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"dep\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;

exports[`Build with a linked dep out of source build macos || linux: build-env snapshot 1`] = `
"# Build environment for with-linked-dep-_build@link:./package.json

#
# dep@1.0.0
#
export CAML_LD_LIBRARY_PATH=\\"%projectPath%/_esy/default/store/i/dep-342de796/stublibs:%projectPath%/_esy/default/store/i/dep-342de796/lib/stublibs:$CAML_LD_LIBRARY_PATH\\"
export OCAMLPATH=\\"%projectPath%/_esy/default/store/i/dep-342de796/lib:$OCAMLPATH\\"
export MAN_PATH=\\"%projectPath%/_esy/default/store/i/dep-342de796/man:$MAN_PATH\\"
export PATH=\\"%projectPath%/_esy/default/store/i/dep-342de796/bin:$PATH\\"

#
# with-linked-dep-_build@1.0.0
#
export OCAMLFIND_LDCONF=\\"ignore\\"
export OCAMLFIND_DESTDIR=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__etc=\\"%projectPath%/_esy/default/store/i/%id%/etc\\"
export cur__share=\\"%projectPath%/_esy/default/store/i/%id%/share\\"
export cur__toplevel=\\"%projectPath%/_esy/default/store/i/%id%/toplevel\\"
export cur__stublibs=\\"%projectPath%/_esy/default/store/i/%id%/stublibs\\"
export cur__doc=\\"%projectPath%/_esy/default/store/i/%id%/doc\\"
export cur__man=\\"%projectPath%/_esy/default/store/i/%id%/man\\"
export cur__lib=\\"%projectPath%/_esy/default/store/i/%id%/lib\\"
export cur__sbin=\\"%projectPath%/_esy/default/store/i/%id%/sbin\\"
export cur__bin=\\"%projectPath%/_esy/default/store/i/%id%/bin\\"
export cur__install=\\"%projectPath%/_esy/default/store/i/%id%\\"
export cur__target_dir=\\"%projectPath%/_esy/default/store/b/%id%\\"
export cur__original_root=\\"%projectPath%\\"
export cur__root=\\"%projectPath%\\"
export cur__dev=\\"true\\"
export cur__version=\\"1.0.0\\"
export cur__name=\\"with-linked-dep-_build\\"
export DUNE_BUILD_DIR=\\"%projectPath%/_esy/default/store/b/%id%\\"

#
# Built-in
#
export SHELL=\\"env -i /bin/bash --norc --noprofile\\"
export PATH=\\"$PATH:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin\\""
`;
